Fixes #2141, #1732, #1652 improves rebase editor  - Improves performance and user experience  - Adds always available header and footer  - Shows commit details on selection  - Adds full commit message  - Adds  fixup shortcut key to UI  - Fixes large rebases not showing commit details

--- a/src/webviews/apps/rebase/rebase.scss
+++ b/src/webviews/apps/rebase/rebase.scss
@@ -3,25 +3,30 @@
 @import '../shared/utils';
 
 body {
-	height: unset;
+	overflow: overlay;
 }
 
 .container {
 	display: grid;
 	font-size: 1.3em;
-	grid-template-areas: 'header' 'entries' 'shortcuts' 'actions';
-	grid-template-columns: repeat(1, 1fr min-content);
+	grid-template-areas: 'header' 'entries' 'footer';
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr auto;
+	height: 100vh;
 	margin: 0 auto;
-	grid-gap: 0.5em 0;
 	max-width: 1200px;
-	min-width: 450px;
+	min-width: 495px;
 }
 
 header {
+	grid-area: header;
+
 	display: flex;
 	align-items: baseline;
 	flex-wrap: wrap;
 	margin: 0;
+	gap: 0 0.5em;
+	position: relative;
 
 	h2 {
 		flex: auto 0 1;
@@ -57,8 +62,24 @@ h4 {
 	opacity: 0.8;
 }
 
-.entries {
+h4#subhead {
+	padding-right: 12rem;
+}
+
+footer {
+	grid-area: footer;
+
+	display: grid;
+	grid-template-areas: 'shortcuts' 'actions';
+	border-top: 1px solid var(--vscode-sideBarSectionHeader-border);
+}
+
+.entries-container {
 	grid-area: entries;
+	overflow: auto;
+}
+
+.entries {
 	border-left: 2px solid;
 	margin-left: 10px;
 	padding-left: 4px;
@@ -82,23 +103,37 @@ h4 {
 
 .shortcuts {
 	grid-area: shortcuts;
-	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	text-align: center;
 }
 
 .actions {
 	grid-area: actions;
-	margin: 10px;
+	margin: 0.5rem 0 1rem 0;
 	display: flex;
 	flex-wrap: wrap;
 }
 
 .actions--left {
 	display: flex;
+	gap: 0 1rem;
 }
 
 .actions--right {
 	display: flex;
 	margin-left: auto;
+	gap: 0 1rem;
+}
+
+.button {
+	letter-spacing: 0.1rem;
+	margin: 0;
+	padding: 0.5rem 1rem;
+
+	.shortcut {
+		margin: 0.1rem 0 0 0;
+	}
 }
 
 $entry-padding: 5px;
@@ -107,7 +142,7 @@ $entry-padding: 5px;
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 0 10px;
+	margin: 0px 5px 0px 10px;
 	padding: $entry-padding 0;
 	border: 2px solid transparent;
 	border-radius: 3px;
@@ -222,7 +257,7 @@ $entry-padding: 5px;
 			opacity: 0.3;
 		}
 
-		& > .entry-ref {
+		& > .entry-sha {
 			opacity: 0.4;
 		}
 
@@ -349,7 +384,6 @@ $entry-padding: 5px;
 .entry-message {
 	flex: 100% 1 1;
 	margin: 0 10px;
-	position: relative;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
@@ -377,7 +411,7 @@ $entry-padding: 5px;
 
 .entry-author,
 .entry-date,
-.entry-ref {
+.entry-sha {
 	flex: auto 0 0;
 	margin: 0 10px;
 	opacity: 0.5;
@@ -394,7 +428,7 @@ $entry-padding: 5px;
 	}
 }
 
-.entry-ref {
+.entry-sha {
 	opacity: 0.7;
 }
 
@@ -413,6 +447,9 @@ $entry-padding: 5px;
 	flex-direction: row-reverse;
 	align-items: center;
 	gap: 0.5em;
+	position: absolute;
+	top: 2rem;
+	right: 0;
 
 	&__input,
 	&__indicator {
